change picture format

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<section class="section-two">
 		<div class="card-container">
 			<div class="image-container">
-				<img src="images/mu_word_detail.PNG" alt="notfound">
+				<img src="images/mu_word_detail.png" alt="notfound">
 			</div>
 			<h1>ANGLE</h1>
 		</div>
